--- a/a-note-for-lime.html
+++ b/a-note-for-lime.html
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Limeoats | A Note For Lime</title>
+    <title>A Note For Lime | Limeoats</title>
     <link rel="canonical" href="http://www.limeoats.com/a-note-for-lime.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/pple-touch-icon-152x152.png"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
-    <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF"/>
-    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png"/>
-    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png"/>
-    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png"/>
-    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png"/>
-    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png"/>
-    <meta name="theme-color" content="#ffffff">
     <meta name="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
     <meta name="author" content="Limeoats">
 
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="css/syntaxhighlight.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="favicon.ico" />
+
+    <script src="js/highlight.pack.js"></script>
+    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
 
     <script>
         //Google analytics
@@ -49,67 +36,130 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-78321209-1', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
-<meta itemprop="name" content="Limeoats | A Note For Lime">
-<meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
-<section class="page-header">
-    <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
-    <div class="project-icons">
-        <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
-        <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="YouTube" /></a>
-        <a href="https://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
-        <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
-        <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
-        <a href="https://discord.gg/TwbAEb4" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
+    <meta itemprop="name" content=" A Note For Lime | Limeoats">
+    <meta itemprop="description" content="Help Oats deliver an important note to Lime in this fast-paced 2D Platformer!">
+    <nav class="navbar navbar-expand-sm navbar-light bg-faded">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="http://www.limeoats.com">
+            <img src="http://www.limeoats.com/images/favicon/apple-touch-icon-72x72.png" />
+        </a>
+        <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
+
+        <!-- Links -->
+        <div class="collapse navbar-collapse justify-content-end" id="nav-content">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#writing">Writing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#publications">Publications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="main-container">
+        <div class="section-container">
+            <div class="section-title">
+                A Note For Lime
+            </div>
+            <div class="section-text-small">
+                <p>
+                    <img src="images/a-note-for-lime/a-note-for-lime-screenshot-1.png" alt="A Note For Lime" />
+                </p>
+                <p>
+                    Help Oats deliver an important note to Lime!
+                </p>
+                <p>
+                    One year ago, Oats asked Lime to be his girlfriend and she said yes.
+                </p>
+                <p>
+                    Now, exactly one year later, he has a note that must be delivered to her.
+                </p>
+                <p>
+                    Help Oats make his way through 3 challenging, action-packed levels to reach his beautiful girlfriend on their anniversary.
+                </p>
+                <hr/>
+                <p>
+                    Download A Note For Lime by clicking the button below for your operating system.
+                    <div id="a-note-for-lime-buttons" class="project-buttons" style="padding-top: 10px;">
+                        <a class="project-button" href="http://bit.ly/1Oakc8k">Windows</a>
+                        <a class="project-button" href="http://bit.ly/1liYcBo">Mac OS X</a>
+                        <a class="project-button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank">Donate</a>
+                    </div>
+                </p>
+                <p>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.limeoats.com/a-note-for-lime.html" data-via="Limeoats">Tweet</a>
+                    <script>
+                        !function (d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                            if (!d.getElementById(id)) {
+                                js = d.createElement(s);
+                                js.id = id;
+                                js.src = p + '://platform.twitter.com/widgets.js';
+                                fjs.parentNode.insertBefore(js, fjs);
+                            }
+                        }(document, 'script', 'twitter-wjs');</script>
+                </p>
+                <p>
+                    <div id="disqus_thread"></div>
+                    <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES * * */
+                        var disqus_shortname = 'limeoats';
+                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                        (function () {
+                            var dsq = document.createElement('script');
+                            dsq.type = 'text/javascript';
+                            dsq.async = true;
+                            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                        })();
+                    </script>
+                </p>
+            </div>
+        </div>
     </div>
-</section>
-<section class="main-content">
-    <div>
-        <h2>A Note For Lime</h2>
-        <br/>
-        <img src="images/a-note-for-lime-screenshot-1.png" alt="A Note For Lime Image"/>
-        <br/><br/>
-        <p>
-            Help Oats deliver an important note to Lime!<br/><br/>
-            One year ago, Oats asked Lime to be his girlfriend and she said yes.<br/><br/>
-            Now, exactly one year later, he has a note that must be delivered to her.<br/><br/>
-            Help Oats make his way through 3 challenging, action-packed levels to reach his beautiful girlfriend on
-            their anniversary.
-        </p>
-        <hr/>
-        <p>
-            Download A Note For Lime by clicking the button below for your operating system!
-        </p>
-        <a href="http://bit.ly/1Oakc8k" class="limeButton" style="width: 120px;" target="_blank">Windows Download</a>
-        <a href="http://bit.ly/1liYcBo" class="limeButton" style="width: 120px;" target="_blank">Mac OS X Download</a>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q6CFUKQM48AMA" target="_blank"
-           class="limeButton" style="width: 120px;">Donate to Limeoats</a>
-        <br/>
+
+    <div class="footer">
+        <div class="copyright">
+            &copy; 2012
+            <span id="currentYear"></span>
+            <a href="http://www.limeoats.com">Limeoats</a>
+        </div>
+        <div class="footer-icons">
+            <a href="https://www.twitter.com/limeoats" target="_blank">
+                <img src="images/twitter.png" title="Twitter" />
+            </a>
+            <a href="https://www.instagram.com/limeoats" target="_blank">
+                <img src="images/instagram.png" title="Instagram" />
+                <a href="https://www.youtube.com/limeoats" target="_blank">
+                    <img src="images/youtube.png" title="Youtube" />
+                </a>
+                <a href="https://www.github.com/limeoats" target="_blank">
+                    <img src="images/github.png" title="Github" />
+                </a>
+        </div>
     </div>
-    <br/>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES * * */
-        var disqus_shortname = 'limeoats';
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function () {
-            var dsq = document.createElement('script');
-            dsq.type = 'text/javascript';
-            dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <div>
-        <footer class="site-footer">
-            <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
-        </footer>
-    </div>
-</section>
 </body>
+
 </html>
