--- a/discord.html
+++ b/discord.html
@@ -1,39 +1,23 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Limeoats | Discord</title>
+    <title>Discord | Limeoats</title>
     <link rel="canonical" href="http://www.limeoats.com/discord.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/pple-touch-icon-152x152.png"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
-    <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF"/>
-    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png"/>
-    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png"/>
-    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png"/>
-    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png"/>
-    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png"/>
-    <meta name="theme-color" content="#ffffff">
     <meta name="description" content="The official Limeoats Discord chat server.">
     <meta name="author" content="Limeoats">
 
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="css/syntaxhighlight.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="favicon.ico" />
+
+    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
 
     <script>
@@ -49,14 +33,73 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-78321209-1', 'auto');
         ga('send', 'pageview');
 
-        window.onload = function () {
+        window.onload = function() {
             window.location.replace("https://discord.gg/TwbAEb4");
         }
     </script>
+
 </head>
-<body></body>
+
+<body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-faded">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="http://www.limeoats.com">
+            <img src="http://www.limeoats.com/images/favicon/apple-touch-icon-72x72.png" />
+        </a>
+        <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
+
+        <!-- Links -->
+        <div class="collapse navbar-collapse justify-content-end" id="nav-content">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#writing">Writing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#publications">Publications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    
+
+    <div class="footer">
+        <div class="copyright">
+            &copy; 2012
+            <span id="currentYear"></span>
+            <a href="http://www.limeoats.com">Limeoats</a>
+        </div>
+        <div class="footer-icons">
+            <a href="https://www.twitter.com/limeoats" target="_blank">
+                <img src="images/twitter.png" title="Twitter" />
+            </a>
+            <a href="https://www.instagram.com/limeoats" target="_blank">
+                <img src="images/instagram.png" title="Instagram" />
+                <a href="https://www.youtube.com/limeoats" target="_blank">
+                    <img src="images/youtube.png" title="Youtube" />
+                </a>
+                <a href="https://www.github.com/limeoats" target="_blank">
+                    <img src="images/github.png" title="Github" />
+                </a>
+        </div>
+    </div>
+</body>
+
 </html>
