--- a/lime2d-setup-guide.html
+++ b/lime2d-setup-guide.html
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Limeoats | Lime2D Setup Guide</title>
+    <title>Lime2D Setup Guide | Limeoats</title>
     <link rel="canonical" href="http://www.limeoats.com/lime2d-setup-guide.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
-    <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF"/>
-    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png"/>
-    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png"/>
-    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png"/>
-    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png"/>
-    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png"/>
-    <meta name="theme-color" content="#ffffff">
     <meta name="description" content="A guide for setting up Lime2D with your C++ project.">
     <meta name="author" content="Limeoats">
 
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="css/syntaxhighlight.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="favicon.ico" />
+
+    <script src="js/highlight.pack.js"></script>
+    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
 
     <script>
         //Google analytics
@@ -49,122 +36,168 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-78321209-1', 'auto');
         ga('send', 'pageview');
     </script>
+
+    
 </head>
+
 <body>
-<meta itemprop="name" content="Limeoats | Lime2D Setup Guide">
-<meta itemprop="description" content="A guide for setting up Lime2D with your C++ project.">
-<section class="page-header">
-    <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
-    <div class="project-icons">
-        <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
-        <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="YouTube" /></a>
-        <a href="https://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
-        <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
-        <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
-        <a href="https://discord.gg/TwbAEb4" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
+    <meta itemprop="name" content="Lime2D Setup Guide | Limeoats">
+    <meta itemprop="description" content="A guide for setting up Lime2D with your C++ project.">
+    <nav class="navbar navbar-expand-sm navbar-light bg-faded">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="http://www.limeoats.com">
+            <img src="http://www.limeoats.com/images/favicon/apple-touch-icon-72x72.png" />
+        </a>
+        <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
+
+        <!-- Links -->
+        <div class="collapse navbar-collapse justify-content-end" id="nav-content">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#writing">Writing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#publications">Publications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="main-container">
+        <div class="section-container">
+            <div class="section-title">
+                Lime2D Setup Guide
+            </div>
+            <div class="section-text-small">
+                <p>
+                    If you're reading this guide, then you must be interested in getting Lime2D working in your C++ project. I'll take you through setting up Lime2D step-by-step so that you can start making your game.
+                </p>
+                <h4>Prerequisites</h4>
+                <p>
+                    Make sure you have the following downloaded before following this guide. I'll go through where to put everything in the next section:
+                </p>
+                <p>
+                    <ul>
+                        <li><a href="http://github.com/limeoats/Lime2D" target="_blank">Lime2D</a></li>
+                        <li><a href="http://bit.ly/2eyVllI" target="_blank">The Lime2D Project Template</a></li>
+                        <li>Something to write and compile C++ code with (IDE, text editor with separate compiler, etc). I will be using <a href="http://jetbrains.com/clion" target="_blank">JetBrains CLion</a> throughout this guide.</li>
+                        <li><a href="http://www.sfml-dev.org/download/sfml/2.4.0/" target="_blank">SFML</a>, preferably the newest version (2.4.0)</li>
+                        <li><a href="http://luabinaries.sourceforge.net/download.html" target="_blank">Lua</a></li>
+                    </ul>
+                </p>
+                <h4>Installing everything</h4>
+                <p>
+                    Start by installing / extracting SFML and Lua to any folder.
+                </p>
+                <p>
+                    I <strong>highly</strong> recommend you install them to C:/SFML-2.4.0/ and C:/Lua if you are on Windows, or ~/Library/Frameworks if you are on a Mac. If you do this, you won't need to change anything in the FindSFML.cmake and FindLua.cmake files later on.
+                </p>
+                <p>
+                    Put the Lime2D folder either in C:/Libs/Lime2D or ~/Library/Frameworks/Lime2D, depending on your operating system.
+                </p>
+                <h4>Setting up the project</h4>
+                <p>
+                    <ol>
+                        <li>Extract the <em>Project</em> folder from the Lime2D Project Template zip file you downloaded earlier. Rename the Project folder to the name of your game.</li>
+                        <li>Start up your IDE (preferably CLion as mentioned above) and open the Lime2D Project Template. You should see something like this:<br/><br/>
+                        <img src="images/lime2d/lime2d-setup-tutorial-1.png" alt="Lime2D" />
+                        <br/><br/>
+                        </li>
+                        <li>Open CMakeLists.txt and change the project name to your project's name on Line 2.</li>
+                        <li>Run CMake on your project and see if there are any errors.</li>
+                        <li>If your SFML / Lua / Lime2D installations are not found by CMake, edit the .cmake files in the cmake folder to check the paths where you installed the libraries.</li>
+                        <li>If you are on Windows, put the .dll files from SFML and Lua in the Debug/Release folders for your project.</li>
+                        <li>In your IDE, set your working directory to the root of the project.</li>
+                    </ol>
+                </p>
+                <h4>Running Lime2D</h4>
+                <p>
+                    If all of the above steps were completed successfully, you should now be able to compile the test program that is provided with the Lime2D Template Project. When you run it, you should probably see a blank black screen.
+                </p>
+                <p>
+                    Press the '=' (Equals) key on your keyboard to enable Lime2D. If you want to change the key that toggles Lime2D, go into main.cpp and change the event key check to whichever key you'd like.
+                </p>
+                <p>
+                    If a green menu appeared across the top of your window, then it worked! You can now click File -> Configure and set up Lime2D.<br/><br/>
+                    <img src="images/lime2d/lime2d-setup-tutorial-2.png" alt="Lime2D" />
+                    
+                </p>
+                <p>
+                    If you have any questions, please post them below and I would be glad to answer them.
+                </p>
+                <p>
+                    Happy developing :-)
+                </p>
+                <p>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.limeoats.com/lime2d-setup-guide.html"
+                        data-via="Limeoats">Tweet</a>
+                    <script>
+                        !function (d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                            if (!d.getElementById(id)) {
+                                js = d.createElement(s);
+                                js.id = id;
+                                js.src = p + '://platform.twitter.com/widgets.js';
+                                fjs.parentNode.insertBefore(js, fjs);
+                            }
+                        }(document, 'script', 'twitter-wjs');</script>
+                </p>
+                <p>
+                    <div id="disqus_thread"></div>
+                    <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES * * */
+                        var disqus_shortname = 'limeoats';
+                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                        (function () {
+                            var dsq = document.createElement('script');
+                            dsq.type = 'text/javascript';
+                            dsq.async = true;
+                            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                        })();
+                    </script>
+                </p>
+            </div>
+        </div>
     </div>
-</section>
-<section class="main-content">
-    <div>
-        <h2>Lime2D Setup Guide</h2>
-        <p>
-            <br/>
-            If you're reading this guide, then you must be interested in getting Lime2D working in your C++ project.
-            I'll take you through setting up Lime2D step-by-step so that you can start making your game.
-        </p>
-        <hr/>
-        <p>
-        <h3>Prerequisites</h3>
-        Make sure you have the following downloaded before following this guide. I'll go through where to put everything
-        in the next section:
-        <ul>
-            <li><a href="http://github.com/limeoats/Lime2D" target="_blank">Lime2D</a></li>
-            <li><a href="http://bit.ly/2eyVllI">The Lime2D Project Template</a></li>
-            <li>Something to write and compile C++ code with (IDE, text editor with separate compiler, etc).
-                I will be using <a href="http://jetbrains.com/clion" target="_blank">JetBrains CLion</a> throughout the
-                guide.
-            </li>
-            <li><a href="http://www.sfml-dev.org/download/sfml/2.4.0/" target="_blank">SFML</a>, preferably the newest
-                version (2.4.0), downloaded
-            </li>
-            <li><a href="http://luabinaries.sourceforge.net/download.html" target="_blank">Lua</a></li>
-        </ul>
-        </p>
-        <hr/>
-        <p>
-        <h3>Installing everything</h3>
-        Start by installing / extracting SFML and Lua to any folder.
-        <br/><br/>I <strong>highly</strong> recommend you install them to
-        C:/SFML-2.4.0/ and C:/Lua if you are Windows, or ~/Library/Frameworks if you are on a Mac. If you do this, you
-        won't need to change
-        anything in the FindSFML.cmake and FindLua.cmake files later on.
-        <br/><br/>
-        Put the Lime2D folder either in C:/Libs/Lime2D or ~/Library/Frameworks/Lime2D, depending on your operating
-        system.
-        </p>
-        <hr/>
-        <p>
-        <h3>Setting up the project</h3>
-        <ol>
-            <li>Extract the <em>Project</em> folder from the Lime2D Project Template zip file you downloaded before.
-                Rename the Project folder to the name of your game.
-            </li>
-            <li>Start up your IDE (preferably CLion as mentioned above) and open the Lime2D Project Template.<br/>You
-                should see something like this:<br/>
-                <img src="images/lime2d/lime2d_setup_tutorial_1.png"/></li>
-            <li>Open CMakeLists.txt and change the project name to your project's name on Line 2.</li>
-            <li>Run CMake on your project and see if there are any errors.</li>
-            <li>If your SFML / Lua / Lime2D installations are not being found by CMake, edit the .cmake files in the
-                cmake folder to check the paths
-                where you installed the libraries.
-            </li>
-            <li>If you are on Windows, put the .dll files from SFML in the Debug/Release folders for your project.</li>
-            <li>In your IDE, set your working directory to the root of the project.</li>
-        </ol>
-        </p>
-        <hr/>
-        <p>
-        <h3>Running Lime2D</h3>
-        If all of the above steps were completed successfully, you should now be able to compile the test program that
-        is provided with the Lime2D Template Project. When you run it,
-        you should probably see a blank black screen.
-        <br/><br/>
-        Press the '=' (Equals) key on your keyboard to enable Lime2D. If you want to change the key that toggles Lime2D,
-        go into main.cpp and change the event key check to whichever
-        key you'd like.<br/><br/>
-        If a green menu appeared across the top of your window, then it worked! You can now click File -> Configure and
-        set up Lime2D.
-        <br/>
-        <img src="images/lime2d/lime2d_setup_tutorial_2.png"/>
-        </p>
-        <hr/>
-        <p>
-            If you have any questions, please post them below and I would be glad to answer them. Enjoy!
-        </p>
+
+    <div class="footer">
+        <div class="copyright">
+            &copy; 2012
+            <span id="currentYear"></span>
+            <a href="http://www.limeoats.com">Limeoats</a>
+        </div>
+        <div class="footer-icons">
+            <a href="https://www.twitter.com/limeoats" target="_blank">
+                <img src="images/twitter.png" title="Twitter" />
+            </a>
+            <a href="https://www.instagram.com/limeoats" target="_blank">
+                <img src="images/instagram.png" title="Instagram" />
+                <a href="https://www.youtube.com/limeoats" target="_blank">
+                    <img src="images/youtube.png" title="Youtube" />
+                </a>
+                <a href="https://www.github.com/limeoats" target="_blank">
+                    <img src="images/github.png" title="Github" />
+                </a>
+        </div>
     </div>
-    <br/>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES * * */
-        var disqus_shortname = 'limeoats';
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function () {
-            var dsq = document.createElement('script');
-            dsq.type = 'text/javascript';
-            dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <div>
-        <footer class="site-footer">
-            <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
-        </footer>
-    </div>
-</section>
 </body>
+
 </html>
