--- a/lime2d.html
+++ b/lime2d.html
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Limeoats | Lime2D</title>
+    <title>Lime2D | Limeoats</title>
     <link rel="canonical" href="http://www.limeoats.com/lime2d.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicon/apple-touch-icon-144x144.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicon/apple-touch-icon-60x60.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicon/apple-touch-icon-120x120.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicon/apple-touch-icon-76x76.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicon/apple-touch-icon-152x152.png"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-196x196.png" sizes="196x196"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16"/>
-    <link rel="icon" type="image/png" href="images/favicon/favicon-128.png" sizes="128x128"/>
-    <meta name="application-name" content="&nbsp;"/>
-    <meta name="msapplication-TileColor" content="#FFFFFF"/>
-    <meta name="msapplication-TileImage" content="images/favicon/mstile-144x144.png"/>
-    <meta name="msapplication-square70x70logo" content="images/favicon/mstile-70x70.png"/>
-    <meta name="msapplication-square150x150logo" content="images/favicon/mstile-150x150.png"/>
-    <meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png"/>
-    <meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png"/>
-    <meta name="theme-color" content="#ffffff">
     <meta name="description" content="An open source in-game map/animation editor for 2D game development projects.">
     <meta name="author" content="Limeoats">
 
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="css/syntaxhighlight.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+
+    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="favicon.ico" />
+
+    <script src="js/highlight.pack.js"></script>
+    <script src="js/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
 
     <script>
         //Google analytics
@@ -49,124 +36,178 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-78321209-1', 'auto');
         ga('send', 'pageview');
     </script>
+
+    
 </head>
+
 <body>
-<meta itemprop="name" content="Limeoats | Lime2D">
-<meta itemprop="description" content="An open source in-game map/animation editor for 2D game development projects.">
-<section class="page-header">
-    <h1 class="project-name"><a href="index.html">Limeoats</a></h1>
-    <div class="project-icons">
-        <a href="https://www.twitter.com/limeoats" target="_blank"><img src="images/twitter-icon.png" title="Twitter" /></a>
-        <a href="https://www.youtube.com/channel/UC1azHQrx_NgGnEv5KUZB2jA" target="_blank"><img src="images/youtube-icon.png" title="YouTube" /></a>
-        <a href="https://www.twitch.tv/limeoats" target="_blank"><img src="images/twitch-icon.png" title="Twitch" /></a>
-        <a href="https://www.github.com/limeoats" target="_blank"><img src="images/github-icon.png" title="Github" /></a>
-        <a href="https://www.linkedin.com/pub/mark-guerra/66/a6a/107" target="_blank"><img src="images/linkedin-icon.png" title="LinkedIn" /></a>
-        <a href="https://discord.gg/TwbAEb4" target="_blank"><img src="images/discord-icon.png" title="Discord" id="discordButton" /></a>
+    <meta itemprop="name" content="Lime2D | Limeoats">
+    <meta itemprop="description" content="An open source in-game map/animation editor for 2D game development projects.">
+    <nav class="navbar navbar-expand-sm navbar-light bg-faded">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="http://www.limeoats.com">
+            <img src="http://www.limeoats.com/images/favicon/apple-touch-icon-72x72.png" />
+        </a>
+        <a class="header-name link-no-underline" href="http://www.limeoats.com">Limeoats</span>
+
+        <!-- Links -->
+        <div class="collapse navbar-collapse justify-content-end" id="nav-content">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#writing">Writing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#publications">Publications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="main-container">
+        <div class="section-container">
+            <div class="section-title">
+                Lime2D
+            </div>
+            <div class="section-text-small">
+                <p>
+                    Lime2D is an open source in-game map/animation editor for 2D C++ game development projects.
+                </p>
+                <p>
+                    Since it is an in-game editor, you can edit maps in real-time with your player, collisions, and everything else being rendered.
+                    You can then switch out of the editor and automatically see your updated map / animations. This makes
+                    for extremely efficient 2D level creation.
+                </p>
+                <p>
+                    The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
+                </p>
+                <h4>Installation</h4>
+                <p>
+                    I've created a video tutorial showing the process of getting Lime2D integrated with your game. There is also a text version
+                    for those of you who don't want to follow an entire video.
+                </p>
+                <p>
+                    <ul>
+                        <li>
+                            <a href="https://www.youtube.com/watch?v=iHNyOIGB0PE" target="_blank">Video</a>
+                        </li>
+                        <li>
+                            <a href="lime2d-setup-guide.html">Text version of the guide</a>
+                        </li>
+                    </ul>
+                </p>
+                <p>
+                    If you have any trouble getting Lime2D installed / working or have any questions, please post below detailing exactly what
+                    the issue is. I or somebody else will respond as soon as possible.
+                </p>
+                <h4>Map editor</h4>
+                <p>
+                    <img src="images/lime2d/map-editor-2.png" alt="Map editor" style="width: 500px; margin-top: 6px;" />
+                    <img src="images/lime2d/map-editor-3.png" alt="Map editor" style="width: 500px; margin-top: 6px;" />
+                </p>
+                <p>
+                    <ul>
+                        <li>Efficient custom map format created by me</li>
+                        <li>Create brand new maps of any size while already in-game</li>
+                        <li>Easy map configuration
+                            <ul>
+                                <li>Tileset paths, sprite scale, tile scale, screen size, etc</li>
+                            </ul>
+                        </li>
+                        <li>Use tiles from different tilesets</li>
+                        <li>Draw on multiple layers</li>
+                        <li>Undo / Redo</li>
+                        <li>Smooth zooming in / out</li>
+                        <li>Ambient light editor using real shaders</li>
+                        <li>Shape drawing (lines, rectangles, points)</li>
+                        <li>Entity list for viewing and updating properties of all map objects</li>
+                    </ul>
+                </p>
+                <h4>Animation editor</h4>
+                <p>
+                    <img src="images/lime2d/animation-editor-3.png" alt="Animation editor" style="width: 500px; margin-top: 6px;" />
+                    <img src="images/lime2d/animation-editor-1.png" alt="Animation editor" style="width: 500px; margin-top: 6px;" />
+                </p>
+                <p>
+                    <ul>
+                        <li>Stored efficiently in Lua files</li>
+                        <li>Create / load any animation while already in-game
+                            <ul>
+                                <li>Saving the animation will automatically update it in-game without restarting the game</li>
+                            </ul>
+                        </li>
+                        <li>Zoom in / out</li>
+                        <li>Change any animation properties from within the editor</li>
+                    </ul>
+                </p>
+                <p>
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.limeoats.com/lime2d.html" data-via="Limeoats">Tweet</a>
+                    <script>
+                        !function (d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                            if (!d.getElementById(id)) {
+                                js = d.createElement(s);
+                                js.id = id;
+                                js.src = p + '://platform.twitter.com/widgets.js';
+                                fjs.parentNode.insertBefore(js, fjs);
+                            }
+                        }(document, 'script', 'twitter-wjs');</script>
+                </p>
+                <p>
+                    <div id="disqus_thread"></div>
+                    <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES * * */
+                        var disqus_shortname = 'limeoats';
+                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                        (function () {
+                            var dsq = document.createElement('script');
+                            dsq.type = 'text/javascript';
+                            dsq.async = true;
+                            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                        })();
+                    </script>
+                </p>
+            </div>
+        </div>
     </div>
-</section>
-<section class="main-content">
-    <div>
-        <h2>Lime2D</h2>
-        <!--<img src="images/lime2d_0.png" alt="Lime2D Screenshot" />-->
-        <!-- <video height="300px" autoplay="" loop="" poster="">
-          <source src="images/lime2d/video_1.mp4">
-				  <source src="images/lime2d/video_1.ogv">
-				  Your browser does not support this video.
-				</video> -->
-        <p>
-            <br/>
-            Lime2D is an open source in-game map/animation editor for 2D C++ game development projects.
-            <br/><br/>
-            Since it is an in-game editor, you can edit maps in real-time with your player, collisions,
-            and everything else being rendered. You can then switch out of the editor and automatically see your
-            updated map / animations. This will make for extremely efficient 2D level creation.
-            <br/><br/>
-            The editor can be used in any C++ project using SFML on Windows, Mac OS X, and Linux.
-        </p>
-        <hr/>
-        <p>
-        <h3>Installation</h3>
-        I've created a video tutorial showing the process of getting Lime2D integrated with your game. There is also
-        a text version for those of you who don't want to follow an entire video.
-        <ul>
-            <li><a href="https://www.youtube.com/watch?v=iHNyOIGB0PE" target="_blank">Video</a></li>
-            <li><a href="http://www.limeoats.com/lime2d-setup-guide.html" target="_blank">Text version of the guide</a>
-            </li>
-        </ul>
-        If you have any trouble getting Lime2D installed / working or have any questions, please post below detailing
-        exactly
-        what the issue is. I or somebody else will respond as soon as possible.
-        </p>
-        <hr/>
-        <p>
-        <h3>Map editor</h3>
-        <img src="images/lime2d/map_editor_2.png" class="roundImage"
-             style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="map editor"/>
-        <img src="images/lime2d/map_editor_3.png" class="roundImage"
-             style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="map editor"/>
-        <ul>
-            <li>Efficient custom map format created by me</li>
-            <li>Create brand news maps of any size while already in-game</li>
-            <li>
-                Easy map configuration
-                <ul>
-                    <li>Tileset paths, sprite scale, tile scale, screen size, etc.</li>
-                </ul>
-            </li>
-            <li>Use tiles from different tilesets</li>
-            <li>Draw on multiple layers</li>
-            <li>Undo / Redo</li>
-            <li>Smooth zooming in / out</li>
-            <li>Ambient light editor using real shaders</li>
-            <li>Shape drawing (lines, rectangles, points)</li>
-            <li>Entity list for viewing and updating properties of all map objects</li>
-        </ul>
-        </p>
-        <hr/>
-        <p>
-        <h3>Animation editor</h3>
-        <img src="images/lime2d/animation_editor_3.png" class="roundImage"
-             style="width: 400px; margin-left: 00px; margin-top: 14px;" alt="animation editor"/>
-        <img src="images/lime2d/animation_editor_1.png" class="roundImage"
-             style="width: 400px; margin-left: 10px; margin-top: 14px;" alt="animation editor"/>
-        <ul>
-            <li>Stored efficiently in Lua files</li>
-            <li>
-                Create / load any animation with already in-game
-                <ul>
-                    <li>Saving the animation will automatically update it in-game without restarting the game</li>
-                </ul>
-            </li>
-            <li>Zoom in / out</li>
-            <li>Change any animation properties from within the editor</li>
-        </ul>
-        </p>
-        <hr/>
-        <br/>
+
+    <div class="footer">
+        <div class="copyright">
+            &copy; 2012
+            <span id="currentYear"></span>
+            <a href="http://www.limeoats.com">Limeoats</a>
+        </div>
+        <div class="footer-icons">
+            <a href="https://www.twitter.com/limeoats" target="_blank">
+                <img src="images/twitter.png" title="Twitter" />
+            </a>
+            <a href="https://www.instagram.com/limeoats" target="_blank">
+                <img src="images/instagram.png" title="Instagram" />
+                <a href="https://www.youtube.com/limeoats" target="_blank">
+                    <img src="images/youtube.png" title="Youtube" />
+                </a>
+                <a href="https://www.github.com/limeoats" target="_blank">
+                    <img src="images/github.png" title="Github" />
+                </a>
+        </div>
     </div>
-    <br/>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES * * */
-        var disqus_shortname = 'limeoats';
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function () {
-            var dsq = document.createElement('script');
-            dsq.type = 'text/javascript';
-            dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <div>
-        <footer class="site-footer">
-            <span class="site-footer-credits">&copy; 2012<span id="currentYear"></span> Limeoats</span>
-        </footer>
-    </div>
-</section>
 </body>
+
 </html>
